* 2006-05-21 Jeremy Sanders <jeremy@jeremysanders.net>
  - Further reference improvements
  - Add icon for stylesheet
  
* 2006-04-24 Jeremy Sanders <jeremy@jeremysanders.net>
  - Fix new labels on actions
	
* 2006-04-10 Jeremy Sanders <jeremy@jeremysanders.net>
  - Clip plotters to axes ranges rather than plot
	
* 2006-04-09 Jeremy Sanders <jeremy@jeremysanders.net>
  - Further icons for treeview
  - Move link buttons into label of setting
  - Linked setting should not be RO by default
  - Use weak references in settings for notification of changes
    (removes need for deleting references to notifiers)
	
* 2006-04-06 Jeremy Sanders <jeremy@jeremysanders.net>
  - Large chunk of new stylesheet code added
  - Extra icons for treeview
  
* 2006-03-23 Jeremy Sanders <jeremy@jeremysanders.net>
  - Manual major tick values can be specified
	
* 2006-03-19 Jeremy Sanders <jeremy@jeremysanders.net>
  - Command line opened files should also act as recent files
	
* 2006-03-14 Jeremy Sanders <jeremy@jeremysanders.net>
  - Added patch from James to add recent files menu
  - Correct bug where very small graph ranges cause problems
	 (thanks James)
	
* 2006-02-25 Jeremy Sanders <jeremy@jeremysanders.net>
  - Rework line marker point plotting 
  - Add lozenge plot symbols
  - Tweak click to select to add another couple of pixels
  
* 2006-02-22 Jeremy Sanders <jeremy@jeremysanders.net>
  - Improved arrow symbol shapes
  - Added arrows pointing away from the point
	
* 2006-02-13 Jeremy Sanders <jeremy@jeremysanders.net>
  - Fixed problem reloading data files with blocks
	
* 2006-02-05 Jeremy Sanders <jeremy@jeremysanders.net>
  - Fixed bug where linked datasets may not work in saved files
  - Key positioning improved in the case of no border
  - Reorganising some of the Dataset/LinkedFile code
  - Backend CSV importing done
  - Added ImportFileCSV command
  - Added CSV tab to import dialog
	
* 2006-02-04 Jeremy Sanders <jeremy@jeremysanders.net>
  - Add a few more plot symbols